--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ button:hover {
             <button onclick="addToCart('Shuttlecock Keychain')">Add to Cart</button>
         </div>
     <div class="product-card" data-category="apparel">
-            <img src="Shirt.jpg" alt="Badminton Shirt and Short">
+            <img src="shirt.jpg" alt="Badminton Shirt and Short">
           <h3>Badminton Shirt and Short</h3>
             <p class="price">$5</p>
             <p class="stock">Stock: 100</p>
